--- a/.github/workflows/4 - Publish Module.yml
+++ b/.github/workflows/4 - Publish Module.yml
@@ -13,8 +13,8 @@
 name: Publish Module to PowerShell Gallery
 
 on:
-  release:
-    types: [published]
+  #release:
+  #  types: [published]
   workflow_dispatch:
     inputs:
       version:
