--- a/.github/workflows/1 - Update Dependencies.yml
+++ b/.github/workflows/1 - Update Dependencies.yml
@@ -38,11 +38,9 @@ jobs:
         id: check_packages
         shell: pwsh
         run: |
-          # Set initial defaults.
           $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "src/DLLPickle/Lib"
           $JsonPath = Join-Path -Path $LibPath -ChildPath "Packages.json"
 
-          # Read package tracking JSON
           if (-not (Test-Path $JsonPath)) {
               Write-Error "Package tracking JSON not found at $JsonPath"
               exit 1
@@ -52,29 +50,14 @@ jobs:
           $UpdatesAvailable = $false
           $UpdateSummary = @()
 
-          # Check each package version for updates.
           foreach ($Package in $PackageTracking.packages) {
-              Write-Host "`n=== Checking $($Package.name) ===" -ForegroundColor Cyan
+              $checkResult = & .\.github\scripts\Get-NuGetLatestVersion.ps1 `
+                -PackageName $Package.name `
+                -CurrentVersion $Package.version
 
-              $CurrentVersion = $Package.version
-              Write-Host "Current version: $CurrentVersion"
-
-              # Check the latest version from NuGet.
-              $NuGetUrl = "https://api.nuget.org/v3-registration5-semver1/$($Package.name.ToLower())/index.json"
-              try {
-                  $Response = Invoke-RestMethod -Uri $NuGetUrl -ErrorAction Stop
-                  $LatestVersion = $Response.items[-1].upper
-                  Write-Host "Latest version: $LatestVersion"
-
-                  if ([version]$LatestVersion -gt [version]$CurrentVersion) {
-                      Write-Host "✓ Update available!" -ForegroundColor Green
-                      $UpdatesAvailable = $true
-                      $UpdateSummary += "$($Package.name): $CurrentVersion → $LatestVersion"
-                  } else {
-                      Write-Host "Already up to date" -ForegroundColor Gray
-                  }
-              } catch {
-                  Write-Warning "Failed to check $($Package.name): $_"
+              if ($checkResult.UpdateAvailable) {
+                  $UpdatesAvailable = $true
+                  $UpdateSummary += $checkResult.UpdateMessage
               }
           }
 
@@ -91,97 +74,17 @@ jobs:
         shell: pwsh
         run: |
           $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "src/DLLPickle/Lib"
-          New-Item -ItemType Directory -Path $LibPath -Force | Out-Null
-
-          # Read package tracking JSON
           $JsonPath = Join-Path -Path $LibPath -ChildPath "Packages.json"
-          if (-not (Test-Path $JsonPath)) {
-              Write-Error "Package tracking JSON not found at $JsonPath"
-              exit 1
+
+          $updateResult = & .\.github\scripts\Update-NuGetPackages.ps1 `
+            -PackageTrackingPath $JsonPath `
+            -DestinationPath $LibPath
+
+          if ($updateResult.UpdatedCount -eq 0) {
+              Write-Warning "No packages were successfully updated"
           }
 
-          $PackageTracking = Get-Content $JsonPath -Raw | ConvertFrom-Json
-          $UpdatedPackages = $false
-
-          # Create temp directory
-          $TempDir = Join-Path $env:TEMP "package_update"
-          if (Test-Path $TempDir) {
-              Remove-Item $TempDir -Recurse -Force
-          }
-          New-Item -ItemType Directory -Path $TempDir -Force | Out-Null
-
-          foreach ($Package in $PackageTracking.packages) {
-              Write-Host "`n=== Processing $($Package.name) ===" -ForegroundColor Cyan
-
-              $CurrentVersion = $Package.version
-              Write-Host "Current version: $CurrentVersion"
-
-              # Get latest version
-              $NuGetUrl = "https://api.nuget.org/v3-registration5-semver1/$($Package.name.ToLower())/index.json"
-              try {
-                  $Response = Invoke-RestMethod -Uri $NuGetUrl -ErrorAction Stop
-                  $LatestVersion = $Response.items[-1].upper
-
-                  if ([version]$LatestVersion -gt [version]$CurrentVersion) {
-                      Write-Host "Downloading version $LatestVersion..."
-
-                      # Download package
-                      $DownloadUrl = "https://www.nuget.org/api/v2/package/$($Package.name)/$LatestVersion"
-                      $NupkgPath = Join-Path $TempDir "$($Package.name).$LatestVersion.nupkg"
-                      Invoke-WebRequest -Uri $DownloadUrl -OutFile $NupkgPath -ErrorAction Stop
-
-                      # Extract (nupkg is just a zip)
-                      $ExtractPath = Join-Path $TempDir "$($Package.name)_extracted"
-                      Expand-Archive -Path $NupkgPath -DestinationPath $ExtractPath -Force
-
-                      # Try multiple framework paths in order of preference
-                      $FrameworkPaths = @(
-                          "lib\netstandard2.0\*.dll",
-                          "lib\netstandard2.1\*.dll",
-                          "lib\net6.0\*.dll",
-                          "lib\net472\*.dll",
-                          "runtimes\win\lib\netstandard2.0\*.dll",
-                          "runtimes\win\lib\net6.0\*.dll"
-                      )
-
-                      $DllsCopied = $false
-                      foreach ($FwPath in $FrameworkPaths) {
-                          $SourceDlls = Join-Path $ExtractPath $FwPath
-                          $DllFiles = Get-Item $SourceDlls -ErrorAction SilentlyContinue
-                          if ($DllFiles) {
-                              Write-Host "Copying DLLs from $FwPath..."
-                              Copy-Item -Path $SourceDlls -Destination $LibPath -Force
-                              $DllsCopied = $true
-                              break
-                          }
-                      }
-
-                      if (-not $DllsCopied) {
-                          Write-Warning "No compatible DLLs found for $($Package.name)"
-                      } else {
-                          # Update version in JSON tracking
-                          $Package.version = $LatestVersion
-                          $UpdatedPackages = $true
-                          Write-Host "✓ $($Package.name) $LatestVersion extracted successfully" -ForegroundColor Green
-                      }
-                  } else {
-                      Write-Host "Already up to date" -ForegroundColor Gray
-                  }
-              } catch {
-                  Write-Warning "Failed to process $($Package.name): $_"
-              }
-          }
-
-          # Save updated JSON if any packages were updated
-          if ($UpdatedPackages) {
-              $PackageTracking | ConvertTo-Json -Depth 10 | Set-Content -Path $JsonPath -NoNewline
-              Write-Host "`n✓ Updated package tracking JSON" -ForegroundColor Green
-          }
-
-          # Cleanup temp directory
-          if (Test-Path $TempDir) {
-              Remove-Item $TempDir -Recurse -Force
-          }
+          Write-Host "Updated: $($updateResult.UpdatedCount), Failed: $($updateResult.FailedCount)"
 
       - name: Check for existing PR
         if: steps.check_packages.outputs.updates_available == 'true'
