--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -246,7 +246,7 @@ jobs:
         shell: pwsh
         run: |
           try {
-              Invoke-Build -File ./src/DLLPickle.Build.ps1
+              Invoke-Build -File ./src/DLLPickle.build.ps1
               Write-Host "✓ Build and tests passed" -ForegroundColor Green
           }
           catch {
@@ -490,3 +490,4 @@ jobs:
           "@
 
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value $summary
+
